Add review record

--- a/index.html
+++ b/index.html
@@ -404,6 +404,14 @@
         <ul>
             <li>
                 <div class="pub">
+                    <a href="#" class="pub-title">Reviewer, the Journal of Supercomputing, 2024.</a> | 
+                    <span class="pub">
+                        <a href="#"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
+                    </span>
+                </div>
+              </li>
+            <li>
+                <div class="pub">
                     <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112" class="pub-title">Reviewer, Computational Biology and Bioinformatics, 2020-2022.</a> | 
                     <span class="pub">
                         <a href="http://www.sciencepublishinggroup.com/journal/peerreviewers?journalid=112"><i class="fa fa-globe" aria-hidden="true"></i> Web</a>
