--- a/index.html
+++ b/index.html
@@ -119,10 +119,11 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Data Scientist at Walmart Global Tech</strong> - Rogers, AR [Mar. 2024 ~ present]<br/>
+            <strong>Data Scientist at Walmart Global Tech</strong> - Bentonville, AR [Mar. 2024 ~ present]<br/>
             <ul>
-                <li>Implemented parallel framework for daily forecasting.</li>
-                <li>Created end-to-end data pipelines for daily forecasting.</li>
+                <li>Implemented parallel framework for daily forecast.</li>
+                <li>Created end-to-end data pipelines for daily forecast.</li>
+                <li>Developed a web app to visualize daily forecast results.</li>
             </ul>
         </div>
 
@@ -467,7 +468,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-08-27</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-11-11</p>
         </div>
     </div>
 
