Add new conference paper

--- a/index.html
+++ b/index.html
@@ -188,6 +188,19 @@
             <li>
                 <div class="pub">
                     <strong>
+                        <a href="https://arxiv.org/abs/2502.12393" class="pub-title">Time Series Treatment Effects Analysis with Always-Missing Controls</a>
+                    </strong><br/>
+                    Juan Shu, Qiyu Han, George Chen, Xihao Cao, Kangming Luo, Dan Pallotta, Shivam Agrawal, Yuping Lu, Xiaoyu Zhang, Jawad Mansoor, Jyoti Anand<br/>
+                    <span class="venue"><a href="https://pakdd2025.org/">PAKDD 2025</a></span> (2025) | 
+                    <span class="pub">
+                        <a href="https://arxiv.org/abs/2502.12393"><i class="fa fa-file-pdf-o" aria-hidden="true"></i> Paper</a> | 
+                        <a href="https://arxiv.org/abs/2502.12393"><i class="fa fa-globe" aria-hidden="true"></i> Web</a> 
+                    </span>
+                </div>
+            </li>
+            <li>
+                <div class="pub">
+                    <strong>
                         <a href="/files/ipac21.pdf" class="pub-title">Enhancing the MOGA Optimization Process at ALS-U with Machine Learning</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Thorsten Hellert, Hiroshi Nishimura, Marco Venturini<br/>
@@ -468,7 +481,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2024-11-11</p>
+            <p>&copy; 2024 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2025-03-30</p>
         </div>
     </div>
 
