--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
                 <h4 id="university-of-tennessee"><a href="http://www.utk.edu"><strong>University of Tennessee, Knoxville</strong></a></h4>
                 <ul>
-                    <li>Research Interests: Machine Learning | Graph Algorithm | Bioinformatics</li> 
+                    <li>Research Interests: Machine Learning | Graph Algorithms | Bioinformatics</li> 
                     <li>PhD in Computer Science (August 2019) | GPA: 3.91</li>
                     <li>Advisor: <a href="https://web.eecs.utk.edu/~mlangsto/">Dr. Michael A. Langston</a></li>
                 </ul>
