--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
               
             <div class="col-sm-4 col-md-4">
-                <img src="/img/yupinglu.jpg" class="img-thumbnail" alt="Yuping Lu">
+                <img src="/img/yupinglu.JPG" class="img-thumbnail" alt="Yuping Lu">
                 <br/>
                 <br/>
                 <p class="text-justify" id="moto">
@@ -119,7 +119,7 @@
 
         <h3 id="research-and-work-experience">Experience</h3>
         <div>
-            <strong>Data Scientist at Walmart Global Tech</strong> - Bentonville, AR [Mar. 2024 ~ present]<br/>
+            <strong>Senior Data Scientist at Walmart Global Tech</strong> - Bentonville, AR [Mar. 2024 ~ present]<br/>
             <ul>
                 <li>Implemented parallel framework for daily forecast.</li>
                 <li>Created end-to-end data pipelines for daily forecast.</li>
@@ -481,7 +481,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2025 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2025-03-30</p>
+            <p>&copy; 2025 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2025-06-24</p>
         </div>
     </div>
 
