Use cropped photo

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             </div>
               
             <div class="col-sm-4 col-md-4">
-                <img src="/img/yupinglu.JPG" class="img-thumbnail" alt="Yuping Lu">
+                <img src="/img/yupinglu2.jpg" class="img-thumbnail" alt="Yuping Lu">
                 <br/>
                 <br/>
                 <p class="text-justify" id="moto">
