Update paper names

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
             <li>
                 <div class="pub">
                     <strong>
-                        <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multiobjective Optimization of Ultrahigh-brightness Lattices for Fourth-generation Synchrotron Light Sources</a>
+                        <a href="#" class="pub-title">Demonstration of Machine Learning-enhanced Multi-objective Optimization of Ultrahigh-brightness Lattices for 4th-generation Synchrotron Light Sources</a>
                     </strong><br/>
                     Yuping Lu, Simon C. Leemann, Changchun Sun, Michael P. Ehrlichman, Hiroshi Nishimura, Marco Venturini, Thorsten Hellert<br/>
                     <span class="venue"><a href="https://www.sciencedirect.com/science/article/pii/S0168900223001821">Nuclear Inst. and Methods in Physics Research, A</a></span> — (2023): 168192 doi:10.1016/j.nima.2023.168192 | 
@@ -270,7 +270,7 @@
             <li>
                 <div class="pub">
                     <strong>
-                        <a href="/files/biclique.pdf" class="pub-title">Biclique: Maximal Biclique Enumeration in Bipartite Graphs</a>
+                        <a href="/files/biclique.pdf" class="pub-title">Biclique: an R Package for Maximal Biclique Enumeration in Bipartite Graphs</a>
                     </strong><br/>
                     Yuping Lu, Charles A. Phillips, Michael A. Langston<br/>
                     <span class="venue"><a href="https://bmcresnotes.biomedcentral.com/">BMC Research Notes</a></span> — 13, 88 (2020) doi:10.1186/s13104-020-04955-0 | 
@@ -481,7 +481,7 @@
         </ul>
 
         <div class="footer">
-            <p>&copy; 2025 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2025-06-24</p>
+            <p>&copy; 2025 by Yuping Lu. Powered by <a href="http://getbootstrap.com/">Twitter Bootstrap</a> Last updated: 2025-07-14</p>
         </div>
     </div>
 
